correction sur le body enlevement de overflow hidden

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html{
 }
 body {
   background-color: #595959;
-  overflow: hidden;
 }
 .contener_preloader {
   width: 100vw;
